com-at/build/log/idf_py_stderr_output_828915
/home/eunous/git/dvid/com-at/com-at/components/at_ble/at_ble.c: In function 'at_handle_bleinit':
/home/eunous/git/dvid/com-at/com-at/components/at_ble/at_ble.c:55:5: error: implicit declaration of function 'esp_wifi_stop'; did you mean 'esp_timer_stop'? [-Werror=implicit-function-declaration]
   55 |     esp_wifi_stop();
      |     ^~~~~~~~~~~~~
      |     esp_timer_stop
/home/eunous/git/dvid/com-at/com-at/components/at_ble/at_ble.c:56:5: error: implicit declaration of function 'esp_wifi_deinit'; did you mean 'esp_timer_deinit'? [-Werror=implicit-function-declaration]
   56 |     esp_wifi_deinit();
      |     ^~~~~~~~~~~~~~~
      |     esp_timer_deinit
cc1: some warnings being treated as errors
make[2]: *** [esp-idf/at_ble/CMakeFiles/__idf_at_ble.dir/build.make:76: esp-idf/at_ble/CMakeFiles/__idf_at_ble.dir/at_ble.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:5745: esp-idf/at_ble/CMakeFiles/__idf_at_ble.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
